--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,8 @@ header {
     height: 50px;
     padding: 0 20px;
     font-size: 80%;
+    max-width: 820px;
+    margin: auto;
 }
 
 header > div {
