--- a/assets/style.css
+++ b/assets/style.css
@@ -82,10 +82,27 @@ section {
     border: 1px solid blue;
 }
 
-/* Code for the content in the body */
-
 h2 {
     font-size: 150%;
+}
+
+/* Code for the content in the body */
+
+.work {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 5px;
+}
+
+.card {
+    margin: 1%;
+    border: 1px solid black;
+    width: 48%;
+}
+
+.first {
+    width: 100%;
 }
 
 /* Code for the footer */
