added links to header

--- a/assets/style.css
+++ b/assets/style.css
@@ -86,7 +86,7 @@ h2 {
     font-size: 150%;
 }
 
-/* Code for the content in the body */
+/* Code for the work content in the body */
 
 .work {
     display: flex;
