--- a/assets/style.css
+++ b/assets/style.css
@@ -66,7 +66,7 @@ img {
 
 .sidebar {
     text-align: right;
-    border-right: 1px solid black;
+    border-right: 1px dashed black;
 }
 
 .content {
@@ -76,13 +76,22 @@ img {
 
 .content > p {
     background-color: #E7EAD1;
+    line-height: 1.5;
 }
 
 h2 {
     font-size: 150%;
 }
 
-/* Links format */
+#profile-img {
+    border-radius: 50%;
+    width: 140px;
+    float: left;
+    shape-outside: circle();
+    margin: 20px;
+}
+
+/* Links styling */
 
 a {
     background-image: linear-gradient(
