--- a/assets/style.css
+++ b/assets/style.css
@@ -57,7 +57,6 @@ img {
     grid-gap: 6px;
     grid-template-columns: [col] 1fr [col] 1fr [col] 1fr;
     grid-template-rows: auto;
-    border: 1px solid black;
 }
 
 .box {
@@ -66,7 +65,7 @@ img {
 
 .sidebar {
     text-align: right;
-    border-right: 1px dashed black;
+    border-right: 1px dashed #4A6163;
 }
 
 .content {
@@ -80,7 +79,8 @@ img {
 }
 
 h2 {
-    font-size: 150%;
+    font-size: 200%;
+    color: #F9A66C;
 }
 
 #profile-img {
