--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
+/*
+
 * {
     background-color: #F9FAF4;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
-/* Code for the header */
+/* Code for the header
 header {
     display: flex;
     justify-content: space-between;
@@ -37,7 +39,7 @@ h1 {
     padding-left: 8%;
 }
 
-/* Code for the cover image */
+/* Code for the cover image
 img {
     max-width: 780px;
     margin: 3px 0;
@@ -48,7 +50,7 @@ img {
     justify-content: center;
 }
 
-/* Code for the body */
+/* Code for the body
 
 .wrapper {
     margin: 10px auto;
@@ -91,7 +93,7 @@ h2 {
     margin: 20px;
 }
 
-/* Links styling */
+/* Links styling
 
 a {
     background-image: linear-gradient(
@@ -105,7 +107,6 @@ a {
     display: inline-block;
     padding: 5px 0;
     position: relative;
-    -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: all 0.3s ease-in-out;
     font-weight: bold;
@@ -132,7 +133,7 @@ a {
     width:100%;
   }
 
-/* Code for the work content in the body */
+/* Code for the work content in the body
 
 .work {
     display: flex;
@@ -143,12 +144,15 @@ a {
 .card {
     margin: 1%;
     border: 1px solid black;
-    width: 48%;
+    width: 100%;
 }
 
 .first {
-    width: 100%;
+
     height: 200px;
+
+    background-image: url("../../assets/images/digital-marketing-meeting.jpg");
+    background-size: cover;
 }
 
 .first-txt {
@@ -156,10 +160,21 @@ a {
     width:fit-content;
 }
 
-/* Code for the footer */
+/* Code for the footer
 
 .footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
+
+@media screen and (min-width: 650px){
+    .card {
+        width: 48%;
+    }
+    .first {
+        width: 100%
+    }
+}
+
+*/
