styled works section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,19 +53,21 @@ h1 {
     font-weight: bold;
     color: #4A6163;
     max-width: fit-content;
-    position: relative;
-    left: 280px;
-    top: 70px;
+    margin: 10px;
 }
 
-/* Links */
-
-a {
+.header-links > p > a {
     text-decoration: none;
     background-color: transparent;
     color: #F9FAF4;
 }
 
+.flex-end {
+    display: flex;
+    justify-content: flex-end;
+    align-items: end;
+
+}
 /* Code for content areas */
 
 h2 {
@@ -95,6 +97,55 @@ h2 {
     justify-content: space-around;
     color: #4A6163;
     font-style: italic;
+}
+
+/* Work cards */
+
+.card {
+    width: 98%;
+    height: 100px;
+}
+
+.first {
+    height: 200px;
+    background-image: url("../../assets/images/digital-marketing-meeting.jpg");
+    background-size: cover;
+}
+
+.card-a {
+    background-image: url("https://as1.ftcdn.net/v2/jpg/01/27/62/10/1000_F_127621002_0EQfE7omvvKWyeOwU10PLJuRvnXfDon4.jpg");
+    background-size: cover;
+}
+
+.card-b {
+    background-image: url("https://as1.ftcdn.net/v2/jpg/02/22/59/02/1000_F_222590213_3SNfA2FZpVeDozr8xIojsblCduoXamCT.jpg");
+    background-size: cover;
+}
+
+.card-c {
+    background-image: url("https://as1.ftcdn.net/v2/jpg/02/16/69/04/1000_F_216690453_Gr2trrWnvsV1gnwVXIytuu7Xd4EN1YP7.jpg");
+    background-size: cover;
+}
+
+.card-d {
+    background-image: url("https://as1.ftcdn.net/v2/jpg/04/19/88/84/1000_F_419888446_P7S1LROpN9ipTdDp30UH5MBUvqKg1QGH.jpg");
+    background-size: cover;
+}
+
+.card-link {
+    background-color: #4A6163;
+    width: fit-content;
+    padding: 10px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.card-link > a {
+    text-decoration: none;
+    background-color: transparent;
+    color:#F17A7E;
+    font-weight: bold;
 }
 
 /* Code for the header
