--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,9 @@ h1 {
     background-image: url("../../assets/images/header-img.png");
     background-size: contain;
     background-repeat: no-repeat;
-    height: 100px;
+    width: 100%;
+    height: 0;
+    padding-top: 24.41%;
 }
 
 .header-img > p {
@@ -104,6 +106,7 @@ h2 {
 .card {
     width: 98%;
     height: 100px;
+    margin-bottom: 5px;
 }
 
 .first {
@@ -148,177 +151,12 @@ h2 {
     font-weight: bold;
 }
 
-/* Code for the header
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #4A6163;
-    color: #F9FAF4;
-    align-items: center;
-    height: 50px;
-    padding: 0 20px;
-    font-size: 80%;
-    max-width: 820px;
-    margin: auto;
-}
 
-header > div {
-    display: flex;
-    justify-content: space-between;
-    background-color: #4A6163;
-
-    width: 250px;
-}
-
-header > div > p {
-    background-color: #4A6163;
-}
-
-h1 {
-    background-color: #4A6163;
-    color: #F17A7E;
-    font-size: 250%;
-    padding-left: 8%;
-}
-
-/* Code for the cover image
-img {
-    max-width: 780px;
-    margin: 3px 0;
-}
-
-.cover {
-    display: flex;
-    justify-content: center;
-}
-
-/* Code for the body
-
-.wrapper {
-    margin: 10px auto;
-    max-width: 820px;
-    display: grid;
-    grid-gap: 6px;
-    grid-template-columns: [col] 1fr [col] 1fr [col] 1fr;
-    grid-template-rows: auto;
-}
-
-.box {
-    padding: 5px;
-}
-
-.sidebar {
-    text-align: right;
-    border-right: 1px dashed #4A6163;
-}
-
-.content {
-    grid-column: col 2 / span 2;
-    background-color: #E7EAD1;
-}
-
-.content > p {
-    background-color: #E7EAD1;
-    line-height: 1.5;
-}
-
-h2 {
-    font-size: 200%;
-    color: #F9A66C;
-}
-
-#profile-img {
-    border-radius: 50%;
-    width: 140px;
-    float: left;
-    shape-outside: circle();
-    margin: 20px;
-}
-
-/* Links styling
-
-a {
-    background-image: linear-gradient(
-      to right,
-      #F17A7E,
-      #F17A7E 50%,
-      #E7EAd1 50%
-    );
-    background-size: 200% 100%;
-    background-position: -100%;
-    display: inline-block;
-    padding: 5px 0;
-    position: relative;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    transition: all 0.3s ease-in-out;
-    font-weight: bold;
-}
-
-a:before {
-    content: '';
-    background: #F17A7E;
-    display: block;
-    position: absolute;
-    bottom: -3px;
-    left: 0;
-    width: 0;
-    height: 3px;
-    transition: all 0.3s ease-in-out;
-}
-
-a:hover {
-   background-position: 0;
-   font-weight: bold;
-}
-
-a:hover::before {
-    width:100%;
-}
-
-/* Code for the work content in the body
-
-.work {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-.card {
-    margin: 1%;
-    border: 1px solid black;
-    width: 100%;
-}
-
-.first {
-
-    height: 200px;
-
-    background-image: url("../../assets/images/digital-marketing-meeting.jpg");
-    background-size: cover;
-}
-
-.first-txt {
-    border: 1px solid black;
-    width:fit-content;
-}
-
-/* Code for the footer
-
-.footer {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-@media screen and (min-width: 650px){
-    .card {
-        width: 48%;
-    }
-    .first {
-        width: 100%
+@media screen and (min-width: 900px){
+    .header-img {
+    width: 880px;
+    height: 215px;
+    padding-top: 0;
+    margin: 0 auto;
     }
 }
-
-*/
