adjusted footer links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,12 +95,15 @@ h2 {
     font-style: italic;
 }
 
-.footer {
+
+.footer-links {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     color: #4A6163;
     font-style: italic;
-    padding-bottom: 20px;
+    margin: 0;
+    height: 50px;
 }
 
 /* Work cards */
